<!-- activity_main.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinnerTinh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:prompt="@string/label_select_tinh" />

    <Spinner
        android:id="@+id/spinnerHuyen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:prompt="@string/label_select_huyen" />

    <Spinner
        android:id="@+id/spinnerQuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:prompt="@string/label_select_quan" />

    <Spinner
        android:id="@+id/spinnerXa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:prompt="@string/label_select_xa" />

    <Spinner
        android:id="@+id/spinnerHem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:prompt="@string/label_select_hem" />

    <!-- Thêm TextView để hiển thị thông tin đã chọn -->
    <TextView
        android:id="@+id/selectedInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text=""
        android:textSize="18sp" />

    <!-- Thêm Button để xác nhận và hiển thị thông tin đã chọn -->
    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirm" />

    <Button
        android:id="@+id/luutt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save" />
    <Button
        android:id="@+id/quaylai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Exit" />

</LinearLayout>
